<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_upload_file"
            android:icon="@drawable/logo"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_view_profile"
            android:icon="@drawable/logo"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/logo"
            android:title="@string/logout" />

      <!--  <item
            android:id="@+id/nav_logout_student"
            android:icon="@drawable/icon_logout"
            android:title="@string/logout" />-->
    </group>
</menu>