<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txt_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/user_login"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/txt_heading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_20"
        android:src="@drawable/app_main_logo" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_lay_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_logo"
        android:layout_marginTop="@dimen/dimen_10">

        <EditText
            android:id="@+id/edt_emailid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_15"
            android:hint="@string/enter_your_emailId"
            android:padding="@dimen/dimen_10"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            android:imeOptions="actionNext"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_lay_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_lay_username">

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_15"
            android:hint="@string/enter_your_password"
            android:padding="@dimen/dimen_10"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_login_with_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_lay_password"
        android:layout_marginLeft="@dimen/dimen_15"
        android:layout_marginRight="@dimen/dimen_15"
        android:layout_marginTop="@dimen/dimen_5"
        android:background="@drawable/common_rounded_button"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/txt_do_not_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login_with_student"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_15"
        android:text="@string/donot_have_account"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_do_not_have_an_account"
        android:layout_alignBottom="@+id/txt_do_not_have_an_account"
        android:layout_below="@+id/btn_login_with_student"
        android:layout_marginLeft="@dimen/dimen_5"
        android:layout_toEndOf="@+id/txt_do_not_have_an_account"
        android:layout_toRightOf="@+id/txt_do_not_have_an_account"
        android:text="@string/signup"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold" />
</RelativeLayout>